<resources>
    <string name="app_name">Time15</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_month_overview">MonthOverviewActivity</string>
    <string name="action_migrate">Migration</string>
    <string name="dialog_message">Import month _M: Changes: _C</string>
    <string name="dialog_title">Import month</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_main_day">MainDayActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_task_editor">TaskEditorActivity</string>

    <string name="tab_day">Tag</string>
    <string name="tab_month">Monat</string>
    <string name="tab_year">Jahr</string>
    <string name="main_begin">Beginn</string>
    <string name="main_end">Ende</string>
    <string name="main_pause">Pause</string>
    <string name="main_task">Aufgabe</string>
    <string name="main_default_task">Arbeit</string>
    <string name="menu_cloud_status">Status Cloud Backup</string>
    <string name="menu_back">Zurück</string>
    <string name="menu_forward">Vorwärts</string>
    <string name="menu_day">Tab Tag</string>
    <string name="menu_year">Tab Jahr</string>
    <string name="menu_today">Tab Heute</string>
    <string name="menu_month">Tab Monat</string>
    <string name="menu_about">Info</string>
    <string name="menu_new">Aufgabentyp hinzufügen</string>
    <string name="menu_edit">Aufgabentyp anpassen</string>
    <string name="menu_delete">Eintrag Löschen</string>
    <string name="menu_note">Notiz erfassen</string>
    <string name="menu_send">Email Backup</string>
    <string name="menu_cloud_backup">Cloud Backup</string>
    <string name="new_task_title">Aufgabentyp hinzufügen</string>
    <string name="edit_task_title">Aufgabentyp anpassen</string>
    <string name="edit_task_with_begin_end">Mit Von-Bis Uhrzeit</string>
    <string name="edit_task_color_blue">Blau</string>
    <string name="edit_task_color_green">Grün</string>
    <string name="edit_task_color_gray">Grau</string>
    <string name="edit_task_color_in_month_overview">Farbe in Monatsansicht:</string>
    <string name="edit_task_new">Speichern</string>
    <string name="send_email_title">Export als .zip-Datei per Email</string>
    <string name="send_email_button">Senden</string>
    <string name="send_email_correction">Bitte korrekte Email-Adresse eingeben</string>
    <string name="send_email_zip_problem">Konnte Backup-Datei nicht erstellen.</string>
    <string name="cloud_backup_requires_o">Cloud Backup ab Android 8</string>
    <string name="edit_task_error_task_exists">Aufgabe existiert bereits!</string>
    <string name="edit_task_edit">Ändern</string>
    <string name="edit_task_error_task_not_found">Aufgabe existiert nicht!</string>
    <string name="edit_task_cancel">Cancel</string>
    <string name="tasks_per_day_limit">Nur 2 Aufgaben pro Tag!</string>
    <string name="task_add_by_pressing_plus">Erst mit + eine Aufgabe hinzufügen!</string>
    <string name="year_overview_title">Übersicht</string>
    <string name="year_days">Tage</string>
    <string name="year_hours">h</string>
    <string name="year_total">Total</string>
    <string name="display_sum">\u2211</string>
    <string name="main_delete_error">Nichts zu löschen!</string>
    <string name="menu_unlock">Entsperren</string>
    <string name="main_delete_unlock_first">Erst das Schloss öffnen!</string>
    <string name="menu_settings">Settings</string>
    <string name="multi_task_from">Beginnt am:</string>
    <string name="multi_task_to">Endet am:</string>
    <string name="menu_cloud">Cloud Storage Available</string>
    <string name="menu_cloud_restore">aus Cloud wiederherstellen</string>
    <string name="bill_rate">Stundensatz: (Tab nach Eingabe)</string>
    <string name="bill_netto">Netto:</string>
    <string name="bill_tax">USt 19%:</string>
    <string name="bill_brutto">Brutto:</string>
    <string name="menu_bill">Rechnung</string>
</resources>
