<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_backwards"
        android:orderInCategory="100"
        android:title="@string/menu_back"
        android:icon="@android:drawable/ic_media_rew"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_today"
        android:orderInCategory="200"
        android:title="@string/menu_today"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_today"></item>
    <item
        android:id="@+id/action_forwards"
        android:orderInCategory="300"
        android:title="@string/menu_forward"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_media_ff"></item>
    <item
        android:id="@+id/action_month"
        android:orderInCategory="400"
        android:title="@string/menu_month"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_month"></item>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="700"
        android:title="@string/menu_about"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_month"></item>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="500"
        android:title="@string/menu_delete"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_delete"></item>
    <item
        android:id="@+id/action_new"
        android:orderInCategory="510"
        android:title="@string/menu_new"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_month"></item>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="520"
        android:title="@string/menu_edit"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_month"></item>
    <item
        android:id="@+id/action_note"
        android:orderInCategory="525"
        android:title="@string/menu_note"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_month"></item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="530"
        android:title="@string/menu_settings"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_month"></item>
    <item
        android:id="@+id/action_send"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="527"
        android:title="@string/menu_send"
        app:showAsAction="never"></item>
</menu>
