<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mythosapps.time15.MonthOverviewActivity">

    <View
        android:id="@+id/status_bar_background_month"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#536DFE" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMonth"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/status_bar_background_month"
        app:popupTheme="@style/ThemeOverlay.App.PopupMenu"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp" />

    <LinearLayout
        android:id="@+id/linearLayoutMonth"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbarMonth"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayTabView"
                    android:clickable="true"
                    android:onClick="startMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#536DFE"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_day"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#cccccc" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/monthLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monthTabView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#536DFE"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_month"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/dayTabLine"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#9CCEFF"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/yearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/yearTabView"
                    android:clickable="true"
                    android:onClick="startYearOverviewActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#536DFE"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_year"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#cccccc" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableLayout
                    android:id="@+id/tableView"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"></TableLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
