<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mythosapps.time15.YearOverviewActivity">

    <androidx.appcompat.widget.Toolbar xmlns:app="http://schemas.Android.com/apk/res-auto"
        android:id="@+id/toolbarYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarYear"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayTabView"
                    android:clickable="true"
                    android:onClick="startMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#536DFE"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_day"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#cccccc" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/monthLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monthTabView"
                    android:clickable="true"
                    android:onClick="startMonthOverviewActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#536DFE"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_month"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#cccccc" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/yearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/yearTabView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#536DFE"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_year"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/dayTabLine"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#9CCEFF"
                    android:gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableViewYear"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"></TableLayout>
            </LinearLayout>
        </ScrollView>

        <Space
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:minHeight="70dp"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner_border"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/yearTaskSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_drop" />

        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>
