<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.Android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/beginnView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/title"
                android:gravity="center_horizontal"
                android:text="@string/main_begin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1E90FF" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_end"
                android:id="@+id/endeView"
                android:textColor="#1E90FF"
                android:gravity="center_horizontal"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:fillViewport="true"
                android:scrollbars="none"
                android:layout_weight="1"
                android:id="@+id/scrollBegin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </LinearLayout>
            </ScrollView>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:fillViewport="true"
                android:scrollbars="none"
                android:layout_weight="1"
                android:id="@+id/scrollBegin15">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </LinearLayout>
            </ScrollView>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:fillViewport="true"
                android:scrollbars="none"
                android:layout_weight="1"
                android:id="@+id/scrollEnd">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </LinearLayout>
            </ScrollView>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:fillViewport="true"
                android:scrollbars="none"
                android:layout_weight="1"
                android:id="@+id/scrollEnd15">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_pause"
                android:background="@drawable/title"
                android:id="@+id/pauseView"
                android:layout_weight="4"
                android:textColor="#1E90FF"
                android:gravity="center_horizontal" />
            <!--
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/spaceView"
                            android:layout_weight="1"
                            android:gravity="center_horizontal" />
                            -->
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="30"
                android:id="@+id/pauseA"
                android:textSize="48sp"                 android:onClick="verarbeiteKlick"                 android:clickable="true"                 android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="45"
                android:id="@+id/pauseB"
                android:textSize="48sp"                 android:onClick="verarbeiteKlick"                 android:clickable="true"                 android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="60"
                android:id="@+id/pauseC"
                android:textSize="48sp"                 android:onClick="verarbeiteKlick"                 android:clickable="true"                 android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="75"
                android:id="@+id/pauseD"
                android:layout_weight="1"
                android:textSize="48sp"
                android:onClick="verarbeiteKlick"
                android:clickable="true"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal">

                <Space
                    android:id="@+id/spacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:visibility="visible"
                    android:gravity="fill_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/main_default_task"
                    android:id="@+id/kindOfDay"
                    android:layout_weight="4"
                    android:textColor="#1E90FF"
                    android:gravity="center_vertical|center_horizontal"
                    android:clickable="true"
                    android:maxLength="22"
                    android:singleLine="true" />

                <Space
                    android:id="@+id/spacer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="2dp"
                    android:visibility="visible"
                    android:gravity="fill_vertical" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:id="@+id/switchTasksButton"
                    android:onClick="switchTasks"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="00"
                        android:id="@+id/total"
                        android:textSize="48sp"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:textColor="#1E90FF"
                        android:onClick="toggleTotal"
                        android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=":"
                    android:id="@+id/totalSemi"
                    android:textSize="48sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="#1E90FF" />

                    <TextView
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="00"
                        android:id="@+id/total15"
                        android:textSize="48sp"
                        android:gravity=""
                        android:layout_weight="1"
                        android:textColor="#1E90FF"
                        android:onClick="toggleTotal15"
                        android:clickable="true" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/addTaskButton"
                    android:onClick="addTask"
                    android:clickable="true" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(0)"
                android:id="@+id/balance"
                android:layout_weight="4"
                android:gravity="top|center_horizontal" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
